# ansible

./: .gitignore  README.md  ansible.cfg  inventory.txt  pyproject.toml  setup.sh
.github/workflows/: ansible-lint.yml
inventories/dev/: host_startup.yml  hosts.yml
inventories/dev/group_vars/: all.yml  ubuntu.yml
playbooks/: site.yml  startup.yml  utilities.yml
roles/common/tasks/: main.yml
roles/common/vars/: Debian.yml  RedHat.yml
