[project]
name = "ansible-control"
version = "0.1.0"
description = "Ansible control node for remote server management"
requires-python = ">=3.13"

dependencies = [
    "ansible-lint>=24.0.0",
    "molecule>=6.0.0",
    "molecule-plugins[docker]>=1.0.0",
    "pytest>=8.0.0",
    "pytest-testinfra>=10.0.0",
    "yamllint>=1.35.0",
    "ruff>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]  # line length handled by black

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests", "molecule"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
